# trading_kb

./: .gitignore  README.md  pyproject.toml  run_tests.py  tkb  使用说明.md  项目说明_完整版.md
src/trading_kb/: _embed_worker.py  _embed_worker_bge.py  announcement.py  ask.py  classify.py  cli.py  config.py  critique.py  debate.py  deep_ask.py  deep_verify.py  entity_quality.py  entity_registry.py  facts_store.py  grade.py  hypothesis.py  ingest.py  llm.py  models.py  report_lab_adapter.py  revalue.py  semantic.py  sentiment_lane.py  structure_store.py  verify_hooks.py  web.py  web_enrich.py
tests/: conftest.py  test_announcement.py  test_classify_grade.py  test_cli_entries.py  test_concurrency_and_robustness.py  test_critique.py  test_debate_deepask.py  test_deep_verify.py  test_entity_quality.py  test_entity_registry.py  test_facts_store.py  test_fixes.py  test_hypothesis.py  test_ingest_ask_e2e.py  test_real_corpus.py  test_retrieval_regression.py  test_revalue.py  test_semantic_backend.py  test_sentiment_lane.py  test_web.py
