[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trading_kb"
version = "0.1.0"
description = "A股个人投研知识系统 — 研报重lane + 舆情轻lane,时序事实+结构图+双轨成色"
requires-python = ">=3.10"
dependencies = []          # 核心仅用标准库;numpy 可选

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
